[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpm-profiler"
version = "0.1.0"
description = "Simple CSV profiling tool"
authors = [ { name = "You" } ]
dependencies = ["pandas>=1.3.0", "numpy>=1.21.0"]

[project.scripts]
# installs a `dpm-profiler` command that calls profiler.cli:main
dpm-profiler = "profiler.cli:main"
